--- a/client/piek/src/components/Sidebar/NotificationCenter/index.module.sass
+++ b/client/piek/src/components/Sidebar/NotificationCenter/index.module.sass
@@ -6,10 +6,9 @@
 
 .unreadedWrapper
   margin: 1rem 0
-  padding: 1rem
+  padding: .7rem 1.2rem 1rem
   border-radius: var(--br)
-  background: var(--L2)
-  border: 1px solid var(--border)
+  border: 1px dashed var(--lowContrast)
 
 .notificationHeader
   display: grid
@@ -31,8 +30,8 @@
 
 .commentContent
   padding: 10px 10px
-  background: var(--L1) !important
+  background: var(--L1-glass) !important
   border-left: 1px solid var(--accent)
   font-size: .9rem
   &:hover
-    background: var(--L2) !important
+    background: var(--L2-glass) !important
