--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -6,6 +6,10 @@ html{
     --L1: #f2f2f6;
     --L2: #c7c7d82a;
     
+    --L0-glass: rgba(255, 255, 255, 0.2);
+    --L1-glass: rgba(250, 250, 250, 0.5);
+    --L2-glass: rgba(255, 255, 255, .5);
+
     --highContrast: rgba(0, 0, 0, 0.87);
     --lowContrast: rgba(0, 0, 0, .6);
     --disabled: rgba(0, 0, 0, .38);
@@ -25,13 +29,20 @@ html{
 
     --awaitingDispatch: #66cf03;
     --needAttention: #e60909;
+
+    --blurFilter: blur(20px) saturate(160%) contrast(85%) brightness(170%);
 } 
 html.dark {
     --LI: rgb(38 39 43);
-    --L0: rgb(43 44 48);
+    --L0: rgb(30 30 30);
+    --L1: rgb(38 38 38);  
+    --L2: rgb(66 66 66);
 
-    --L1: rgb(53 54 58);  
-    --L2: rgb(63 64 68);
+    --L0-glass: rgba(0, 0, 0, .2);
+    --L1-glass: rgba(30, 30, 30, .9);
+    --L2-glass: rgba(50, 50, 50, .9);
+
+
 
     --highContrast: #d9e4f0;
     --lowContrast:  #adadad;
@@ -40,10 +51,12 @@ html.dark {
 
     --accent:      #a2b3ff;
     --accentLight: #43435c;
-    --border:      rgba( 255 , 255 , 255 , .08 );
+    --border:      rgba( 255 , 255 , 255 , .06 );
     --borderLight: rgba( 255 , 255 , 255 , .04 );
     --bs: #0e0e0e;
 
     --awaitingDispatch: #79cc5de5;
     --needAttention:    #db0404;
+
+    --blurFilter: blur(20px) saturate(160%) contrast(85%) brightness(60%);
     }
