archive serial search and build

--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -1,7 +1,21 @@
 .tableRow
     display: table-row !important
     text-decoration: none
-    vertical-align: middle
+    div
+        vertical-align: middle
+
+.table
+    display: table 
+.tbody
+    display: table-row-group 
+.thead
+    display: table-header-group
+.tr
+    display: table-row
+.td
+    display: table-cell
+.th
+    display: table-cell
 
 .tableWrapper 
     display: table
@@ -11,52 +25,51 @@
     .tableFooter
         padding: .7em
         background: var(--L0)
-    table thead
+    .table .thead
         border-top: 1px solid var(--border)
-    table td:first-of-type
+    .table .td:first-of-type
         border-left: none !important
-    table td:last-of-type
+    .table .td:last-of-type
         border-right: none !important
   
 .tableMain
     border-top: 1px solid var(--border)
     width: 100%
     border-spacing: 0
-    thead th
+    .thead .th
         color: var(--lowContrast)
-        // border-bottom: 1px solid var(--border)
-        height: 30px
         font-size: .7rem
         font-weight: 500
         text-align: left
-    thead th:last-of-type
+        padding: 10px 0
+    .thead .th:last-of-type
         padding: 0 
 
-    tbody td:first-of-type
+    .tbody .td:first-of-type
         text-align: center
         font-size: .7rem
 
-    tbody td
+    .tbody .td
         padding: 6px 5px
         color: var(--lowContrast)
         border-bottom: 1px solid var(--border)
         font-size: .9rem
    
-    tbody a td:nth-of-type(2),
-    tbody a td:nth-of-type(3)
+    .tbody a .td:nth-of-type(2),
+    .tbody a .td:nth-of-type(3)
         opacity: .94
         font-family: 'IBM Plex Mono'
         text-decoration: none
         color: var(--highContrast)
         font-size: 1rem
     
-    td:nth-of-type(4),
-    th:nth-of-type(4)
+    .td:nth-of-type(4),
+    .th:nth-of-type(4)
         border-left: 1px solid var(--border)
         padding-left: 15px
-    td:nth-of-type(4)
+    .td:nth-of-type(4)
         color: var(--highContrast)
-    tbody a:hover
+    .tbody a:hover
         background: var(--LI)
     
 
@@ -64,7 +77,7 @@
 .needAttention,
 .unpaidOrder
     position: relative
-    td:first-of-type::before
+    .td:first-of-type::before
         content: ''
         position: absolute
         top: 0
@@ -74,15 +87,15 @@
         
 
 .awaitingDispatch
-    td:first-of-type::before
+    .td:first-of-type::before
         background: var(--awaitingDispatch) !important
 
 .needAttention
-    td:first-of-type::before
+    .td:first-of-type::before
         background: var(--needAttention) !important
 
 .unpaidOrder
-     td:first-of-type::before
+     .td:first-of-type::before
         background: #ffd000
   
 
