--- a/client/piek/src/components/OrderListLayout/Search/search.module.sass
+++ b/client/piek/src/components/OrderListLayout/Search/search.module.sass
@@ -40,3 +40,17 @@
         100% 
             opacity: 0.0
     
+.adjacentSearchWrap
+    display: flex
+    align-items: center
+    align-self: center
+    justify-content: center
+    padding: .5rem .7rem
+    margin: 0 .3rem
+    background: var(--accent)
+    color: var(--textInvert)
+    font-weight: 600
+    font-size: .8rem
+    border-radius: var(--br)
+    &:hover
+        background: var(--accent-hover)
