--- a/client/piek/src/components/OrderLayout/sass/composition.module.sass
+++ b/client/piek/src/components/OrderLayout/sass/composition.module.sass
@@ -17,7 +17,7 @@
     padding: 1em
     border-bottom: 1px solid var(--borderLight) !important
     display: grid
-    grid-template-columns: .3fr 15fr 1fr 1fr 
+    grid-template-columns: .3fr 15fr 1fr auto 
     font-size: .9rem
     &:last-of-type
       border-bottom: none !important
