--- a/client/piek/src/components/OrderLayout/OrderItemActions/index.module.sass
+++ b/client/piek/src/components/OrderLayout/OrderItemActions/index.module.sass
@@ -1,6 +1,6 @@
 .actionsWrapper
-    border-top: 1px solid var(--border)
-    margin-top: 10px
+    // border-top: 1px solid var(--border)
+    // margin-top: 10px
 
 .deleteButton
     color: var(--danger) !important
