ui impprovment and build

--- a/client/piek/src/components/AttendanceLayout/sass/attendance.module.sass
+++ b/client/piek/src/components/AttendanceLayout/sass/attendance.module.sass
@@ -2,8 +2,8 @@ $status-101: #6989fc
 $status-102: #72c900
 
 .tableWrapper
-  border-top: 1px solid var(--border)
-  border-bottom: 1px solid var(--border)
+  border-top: var(--border)
+  border-bottom: var(--border)
   min-width: 100%
   margin-bottom: 2em
 
@@ -13,7 +13,7 @@ $status-102: #72c900
   color: var(--lowContrast)
   border-collapse: collapse
   width: 100%
-  border-top: 1px solid var(--border)
+  border-top: var(--border)
   thead th
     position: sticky
     top: -3px
@@ -28,7 +28,7 @@ $status-102: #72c900
     background: var(--LI)
 
   tbody td
-    border: 1px solid var(--border) !important
+    border: var(--border) !important
     padding: 0
     position: relative
     min-width: 30px
