--- a/client/piek/src/components/OrderLayout/CheckList (legasy. not used)/index.module.sass
+++ b/client/piek/src/components/OrderLayout/CheckList (legasy. not used)/index.module.sass
@@ -1,7 +1,7 @@
 .unitInput
     background: transparent 
     border: none
-    // border-bottom: 1px dashed var(--border)
+    // border-bottom: 1px dashed var(--border-color)
     box-sizing: border-box
     color: var(--highContrast)
     outline: none
