--- a/client/piek/src/components/OrderLayout/Docs/docs.sass
+++ b/client/piek/src/components/OrderLayout/Docs/docs.sass
@@ -1,5 +1,5 @@
 .Docs
-    // border-left: 1px solid var(--border)
+    // border-left: var(--border)
     .filesContainer
         padding: 1em
     a
