--- a/client/piek/src/components/OrderLayout/OrderItemActions/index.module.sass
+++ b/client/piek/src/components/OrderLayout/OrderItemActions/index.module.sass
@@ -1,5 +1,5 @@
 .actionsWrapper
-    // border-top: 1px solid var(--border)
+    // border-top: var(--border)
     // margin-top: 10px
 
 .deleteButton
