--- a/client/piek/src/components/OrderLayout/RightInfoPanel/EditRightInfoPanel.sass
+++ b/client/piek/src/components/OrderLayout/RightInfoPanel/EditRightInfoPanel.sass
@@ -8,5 +8,5 @@
         input, textarea
             background: var(--L1)
             border-radius: 8px
-            border: 1px solid var(--borderLight)
+            border: 1px solid var(--border-colorLight)
             padding: 10px .5rem
