--- a/client/piek/src/components/OrderLayout/RightInfoPanel/rightPanel.sass
+++ b/client/piek/src/components/OrderLayout/RightInfoPanel/rightPanel.sass
@@ -1,7 +1,7 @@
 //component 
 .OrderInfoCard
-  border-bottom: 1px solid var(--border)
-  border-top: 1px solid var(--border)
+  border-bottom: var(--border)
+  border-top: var(--border)
   padding: .7rem 0
   font-size: .85rem 
   &:hover
@@ -33,7 +33,7 @@
     display: grid
     grid-template-rows: auto 100px
     height: 100%
-    border-left: 1px solid var(--border)
+    border-left: var(--border)
     @media (max-width: 800px)
       max-width: 250px
     .wrap
