--- a/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
+++ b/client/piek/src/components/OrderListLayout/Archive/archive.module.sass
@@ -3,7 +3,7 @@
   flex-direction: row !important
   align-items: center
   padding: .3rem 1rem !important
-  border-bottom: 1px solid var(--border) !important
+  border-bottom: var(--border) !important
 
 .filterInputBase
   margin: 0 5px 
