--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -26,14 +26,14 @@
         padding: .7em
         background: var(--L0)
     .table .thead
-        border-top: 1px solid var(--border)
+        border-top: var(--border)
     .table .td:first-of-type
         border-left: none !important
     .table .td:last-of-type
         border-right: none !important
   
 .tableMain
-    border-top: 1px solid var(--border)
+    border-top: var(--border)
     width: 100%
     border-spacing: 0
     .thead .th
@@ -52,7 +52,7 @@
     .tbody .td
         padding: 6px 5px
         color: var(--lowContrast)
-        border-bottom: 1px solid var(--border)
+        border-bottom: var(--border)
         font-size: .9rem
    
     .tbody a .td:nth-of-type(2),
@@ -65,7 +65,7 @@
     
     .td:nth-of-type(4),
     .th:nth-of-type(4)
-        border-left: 1px solid var(--border)
+        border-left: var(--border)
         padding-left: 15px
     .td:nth-of-type(4)
         color: var(--highContrast)
