--- a/client/piek/src/components/AttendanceLayout/sass/index.sass
+++ b/client/piek/src/components/AttendanceLayout/sass/index.sass
@@ -22,7 +22,7 @@
         font-size: .9em
   
         .wrap
-            border-left: 1px solid var(--border)
+            border-left: var(--border)
             border-radius: 0
             padding: 15px 1rem 
             span
