--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -22,20 +22,25 @@
   position: relative
   display: grid
   grid-template-columns: 2fr auto
+
   .orderActions_box
-    margin-left: auto
     background: var(--L0)
     border-radius: var(--br10)
-    border: 1px solid var(--border)
-    button
-      border-radius: 0
+    border: var(--border)
+    
+    button:last-of-type:not(:first-of-type)
+      border-top-left-radius: 0px
+      border-bottom-left-radius: 0px
     button:not(:last-of-type)
-      border-right: 1px solid var(--border)
+      // border-radius: inherit 0 0 0
+      border-bottom-right-radius: 0px
+      border-top-right-radius: 0px
+      border-right: var(--border)
 
   .page-header
     grid-column-start: 1
     grid-column-end: 3
-    border-bottom: 1px solid var(--border)
+    border-bottom: var(--border)
     padding: 2px 20px
   .Info
     grid-column-start: 3
@@ -45,7 +50,7 @@
     position: sticky
     top: 0
   .Composition
-    border-bottom: 1px solid var(--border)
+    border-bottom: var(--border)
    
 .LeftSideContent
   display: grid
