--- a/client/piek/src/components/ReclamationLayout/index.module.sass
+++ b/client/piek/src/components/ReclamationLayout/index.module.sass
@@ -10,12 +10,12 @@
   grid-template-columns: 1fr 1fr 1fr
   width: 100%
 
-  border-top: 1px solid var(--border)
-  border-bottom: 1px solid var(--border)
+  border-top: var(--border)
+  border-bottom: var(--border)
 
 
   .reclColumn:not(:first-of-type)
-    border-left: 1px solid var(--border)
+    border-left: var(--border)
   .draggableWrapper
     display: flex
     flex-grow: 1
@@ -34,7 +34,7 @@
   text-decoration: none !important
   align-items: center
   position: relative
-  border-bottom: 1px solid var(--borderLight)
+  border-bottom: 1px solid var(--border-colorLight)
   padding: 30px 10px 
   grid-gap: 13px 
   &:hover
