--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -5,7 +5,7 @@
     flex-direction: column
     padding: 10px 0
     width: 50px 
-    border-right: 1px solid var(--border)
+    border-right: var(--border)
     .link
         display: flex
         border: none !important
