--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -40,6 +40,8 @@ input[type=number]
   display: grid
   grid-template-columns: 51px auto
   height: 100vh
+  @media print
+    height: auto !important
 
 
 .base-container
