--- a/client/piek/src/components/AttendanceLayout/sass/attendance.module.sass
+++ b/client/piek/src/components/AttendanceLayout/sass/attendance.module.sass
@@ -1,6 +1,3 @@
-$status-101: #6989fc
-$status-102: #72c900
-
 .tableWrapper
   border-top: var(--border)
   border-bottom: var(--border)
@@ -24,6 +21,9 @@ $status-102: #72c900
     font-weight: normal
   .interval
     color: var(--highContrast) !important
+  .intervalred
+     color: var(--accent) !important
+     font-weight: 600
   tbody tr:hover
     background: var(--LI)
 
@@ -42,7 +42,6 @@ $status-102: #72c900
       color: var(--highContrast)
       font-weight: 700
       padding: 0 7px 
-
 .intervalgrid
   padding: 3px
   display: grid
