--- a/client/piek/src/pages/AttendancePage/sass/reportConfigurator.sass
+++ b/client/piek/src/pages/AttendancePage/sass/reportConfigurator.sass
@@ -1,7 +1,6 @@
 .reportConfigurator
-
-    background: var(--L2)
-    border: var(--border)
+    background: var(--L1)
+    // border: var(--border)
     margin: 0 .5rem .5rem
     padding: .2rem
     border-radius: var(--br)
