--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -3,7 +3,7 @@
 html{
     --LI: #eff0f3;
     --L0: rgb(248, 248, 248);
-    --L1: #f2f2f6;
+    --L1: rgb(235, 235, 240);
     --L2: #c7c7d82a;
     
     --L0-glass: rgba(255, 255, 255, 0.2);
