--- a/client/piek/src/pages/OrderListPage/main.module.sass
+++ b/client/piek/src/pages/OrderListPage/main.module.sass
@@ -46,6 +46,7 @@
         padding: 0 
 
     .tbody .td:first-of-type
+        position: relative !important
         text-align: center
         font-size: .7rem
 
@@ -76,7 +77,7 @@
 .awaitingDispatch,
 .needAttention,
 .unpaidOrder
-    position: relative
+    position: relative !important
     .td:first-of-type::before
         content: ''
         position: absolute
