order status mark styled

--- a/client/piek/src/pages/OrderDetailPage/sass/index.sass
+++ b/client/piek/src/pages/OrderDetailPage/sass/index.sass
@@ -12,8 +12,13 @@
     opacity: .1
   
 .preorderTitle
-    color: var(--accent)
-        
+    color: var(--accent) !important
+    border: 1px solid var(--accent)
+    padding: 5px
+    margin: 0 10px
+    border-radius: var(--br)
+    font-size: 12px
+   
 .OrderLayout
   --window-padding: 0px
   position: relative
