--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -6,6 +6,9 @@
     padding: 10px 0
     width: 50px 
     border-right: var(--border)
+    @media print
+        width: 0 !important
+        opacity: 0
     .link
         display: flex
         border: none !important
