--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -22,8 +22,8 @@ html{
     --accentLight: #E7E9FB;
 
     --shadow-color: #e0e2e7;
-    --border: 1px solid #e0e2e7;
-    --border-color: #e0e2e7;
+    --border: 1px solid #d7dadf;
+    --border-color: #d7dadf;
     --border-colorLight: #e9ebf1de;
 
 
