--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -47,6 +47,7 @@ input[type=number]
 
 .base-container
   overflow-y: auto !important
+  padding: 0 10px 20px 0 
   @media ( min-width: 2000px)
     margin: 0 auto
     width: 1700px 
@@ -68,8 +69,6 @@ input[type=number]
         margin-bottom: -5px !important
         padding-right: 1em
             
-
-
 .pageLayout__header
   display: flex
   align-items: center
