docs redesign && build

--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -47,7 +47,7 @@ input[type=number]
 
 .base-container
   overflow-y: auto !important
-  padding: 0 10px 20px 0 
+  padding: 0 0 20px 0 
   @media ( min-width: 2000px)
     margin: 0 auto
     width: 1700px 
@@ -86,3 +86,4 @@ input[type=number]
       stroke: var(--L0)
   .pageLayout__actions
     margin-left: auto
+
