--- a/client/piek/src/pages/OrderDetailPage/sass/index.sass
+++ b/client/piek/src/pages/OrderDetailPage/sass/index.sass
@@ -72,6 +72,7 @@
     grid-column-start: 1
     grid-column-end: -1
   .Docs
+    border-left: var(--border)
     min-height: 100px
     grid-column-start: 2
     grid-column-end: -1
