--- a/client/piek/src/pages/OrderDetailPage/RightInfoPanel/rightPanel.sass
+++ b/client/piek/src/pages/OrderDetailPage/RightInfoPanel/rightPanel.sass
@@ -5,20 +5,13 @@
   padding: .7rem 0
   font-size: .85rem 
   &:hover
-    .secondaryHeading
+    .secondaryHeadingAnimation
       opacity: 1
   .row
     display: flex !important
     justify-content: space-between
     margin-bottom: 5px
-  .heading
-    margin: 0
-    font-weight: 700
-    text-transform: uppercase
-    font-size: .65rem
-  .secondaryHeading
-    font-size: .8rem
-    color: var(--lowContrast)
+  .secondaryHeadingAnimation
     transition: opacity 200ms ease
     opacity: 0
   table tr
