--- a/client/piek/src/pages/OrderDetailPage/sass/composition.module.sass
+++ b/client/piek/src/pages/OrderDetailPage/sass/composition.module.sass
@@ -15,7 +15,7 @@
 .Unit 
     position: relative
     padding: 1em
-    border-bottom: 1px solid var(--border-colorLight) !important
+    border-bottom: var(--border) !important
     display: grid
     grid-template-columns: .3fr 15fr 1fr auto 
     font-size: .9rem
