minor ui changes

--- a/client/src/pages/orders/table.module.sass
+++ b/client/src/pages/orders/table.module.sass
@@ -49,6 +49,7 @@
     .tbody .td:first-of-type
         position: relative !important
         text-align: center
+        font-size: 12px 
 
     .tbody .td
         padding: 6px 5px
